unpackaged/main/default/objects/LiveChatTranscript/fields/ChatStartURL__c.field-meta.xml
<CustomField>
    <fullName>ChatStartURL__c</fullName>
    <description>The page visited by the user prior to launching the chat session</description>
    <inlineHelpText>The last page visited by the user prior to launching the chat session</inlineHelpText>
    <label>Chat Start URL</label>
    <type>Url</type>
</CustomField>