unpackaged/main/default/objects/LiveChatTranscript/fields/Order_Summary_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary_Id__c</fullName>
    <label>Order Summary Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>