unpackaged/main/default/objects/LiveChatTranscript/listViews/All_Chat_Queue.listView-meta.xml
<ListView>
    <fullName>All_Chat_Queue</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <filterScope>Queue</filterScope>
    <label>All - Queue Chat</label>
    <queue>SDO_Service_Live_Agent</queue>
</ListView>