unpackaged/main/default/objects/LiveChatTranscript/listViews/SDO_All_Chat_Transcripts.listView-meta.xml
<ListView>
    <fullName>SDO_All_Chat_Transcripts</fullName>
    <columns>Name</columns>
    <columns>Contact</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <label>All - Chat Transcripts</label>
</ListView>