unpackaged/main/default/objects/LiveChatTranscript/listViews/SDO_Service_Live_Agent_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>SDO_Service_Live_Agent_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat</label>
    <queue>SDO_Service_Live_Agent</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>